; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/hppfs/extr_hppfs.c_hppfs_alloc_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/hppfs/extr_hppfs.c_hppfs_alloc_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.super_block = type { i32 }
%struct.hppfs_inode_info = type { %struct.inode, i32* }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.inode* (%struct.super_block*)* @hppfs_alloc_inode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.inode* @hppfs_alloc_inode(%struct.super_block* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca %struct.super_block*, align 8
  %4 = alloca %struct.hppfs_inode_info*, align 8
  store %struct.super_block* %0, %struct.super_block** %3, align 8
  %5 = load i32, i32* @GFP_KERNEL, align 4
  %6 = call %struct.hppfs_inode_info* @kmalloc(i32 16, i32 %5)
  store %struct.hppfs_inode_info* %6, %struct.hppfs_inode_info** %4, align 8
  %7 = load %struct.hppfs_inode_info*, %struct.hppfs_inode_info** %4, align 8
  %8 = icmp ne %struct.hppfs_inode_info* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store %struct.inode* null, %struct.inode** %2, align 8
  br label %18

10:                                               ; preds = %1
  %11 = load %struct.hppfs_inode_info*, %struct.hppfs_inode_info** %4, align 8
  %12 = getelementptr inbounds %struct.hppfs_inode_info, %struct.hppfs_inode_info* %11, i32 0, i32 1
  store i32* null, i32** %12, align 8
  %13 = load %struct.hppfs_inode_info*, %struct.hppfs_inode_info** %4, align 8
  %14 = getelementptr inbounds %struct.hppfs_inode_info, %struct.hppfs_inode_info* %13, i32 0, i32 0
  %15 = call i32 @inode_init_once(%struct.inode* %14)
  %16 = load %struct.hppfs_inode_info*, %struct.hppfs_inode_info** %4, align 8
  %17 = getelementptr inbounds %struct.hppfs_inode_info, %struct.hppfs_inode_info* %16, i32 0, i32 0
  store %struct.inode* %17, %struct.inode** %2, align 8
  br label %18

18:                                               ; preds = %10, %9
  %19 = load %struct.inode*, %struct.inode** %2, align 8
  ret %struct.inode* %19
}

declare dso_local %struct.hppfs_inode_info* @kmalloc(i32, i32) #1

declare dso_local i32 @inode_init_once(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
